--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@bebeal/tailwind-glass": "^1.0.0",
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
